--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8"
+    "react-scripts": "2.1.8",
+    "react-social-login": "^3.4.4",
+    "react-social-login-buttons": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
