--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "moment": "^2.24.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.6",
+    "react-audio-player": "^0.11.1",
     "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.8.8",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
     "react-social-login": "^3.4.4",
